--- a/GamePine.html
+++ b/GamePine.html
@@ -42,17 +42,17 @@
             <h2>Démonstration Visuelle</h2>
             <div class="media-grid">
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Illustration du code">
+                    <img src="progillu/imageGP1.png" alt="Illustration du code">
                 </div>
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Illustration du code">
+                    <img src="progillu/imageGP2.png" alt="Illustration du code">
                 </div>
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Illustration du code">
+                    <img src="progillu/imageGP3.png" alt="Illustration du code">
                 </div>
                 <div class="media-item video-wrapper">
-                    <video controls muted poster="progillu/2025-05-07 15-49-15.mkv">
-                        <source src="progillu/2025-05-07 15-49-15.mkv">
+                    <video controls muted poster="progillu/2025-05-12 14-19-36.mkv">
+                        <source src="progillu/2025-05-12 14-19-36.mkv">
                         Votre navigateur ne supporte pas les vidéos HTML5.
                     </video>
                 </div>
