--- a/GamePineEN.html
+++ b/GamePineEN.html
@@ -42,17 +42,17 @@
             <h2>Visual Demonstration</h2>
             <div class="media-grid">
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Code illustration">
+                    <img src="progillu/imageGP1.png" alt="Code illustration">
                 </div>
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Code illustration">
+                    <img src="progillu/imageGP2.png" alt="Code illustration">
                 </div>
                 <div class="media-item">
-                    <img src="progillu/chantier en cours.jpg" alt="Code illustration">
+                    <img src="progillu/imageGP3.png" alt="Code illustration">
                 </div>
                 <div class="media-item video-wrapper">
-                    <video controls muted poster="progillu/2025-05-07 15-49-15.mkv">
-                        <source src="progillu/2025-05-07 15-49-15.mkv">
+                    <video controls muted poster="progillu/2025-05-12 14-19-36.mkv">
+                        <source src="progillu/2025-05-12 14-19-36.mkv">
                         Your browser does not support HTML5 video.
                     </video>
                 </div>
