Update GamePine.html page fine

--- a/GamePine.html
+++ b/GamePine.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="project-container">
-        <h1 class="project-title">Projet : Game&Pine  — Page en cours de construction</h1>
+        <h1 class="project-title">Projet : Game&Pine </h1>
         
         <!-- Section Présentation -->
         <section class="project-section">
