Update GamePineEN.html page fine

--- a/GamePineEN.html
+++ b/GamePineEN.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="project-container">
-        <h1 class="project-title">Project: Game&Pine — Page Under Construction</h1>
+        <h1 class="project-title">Project: Game&Pine </h1>
         
         <!-- Project Purpose Section -->
         <section class="project-section">
