Update  ajout sport accueil.html

--- a/accueil.html
+++ b/accueil.html
@@ -36,26 +36,38 @@
                 </a>
             </div>
             <div class="small-bubbles-container">
-                <div class="small-bubbles-row">
-                    <div class="bubble small">
-                        <a href="menuprojets.html">
-                            <img src="programmation.jpg" alt="Projet Programmation">
-                            Projets de Programmation
-                        </a>
-                    </div>
-                    <div class="bubble small" onclick="ouvrirPopupProjet()" style="cursor: pointer;">
-                        <a href="javascript:void(0)">
-                            <img src="progillu/avenirpro.jpg" alt="Projet Professionel">
-                            Projets Professionnels
-                        </a>
-                    </div>
-                </div>
-                <div class="bubble minecraft">
-                    <a href="minecraftpage.html">
-                        <img src="minecraftimageaccueil.png" alt="Projet Minecraft">
-                        Projet Minecraft
-                    </a>
-                </div>
+               <div class="small-bubbles-row">
+    <div class="bubble small">
+        <a href="menuprojets.html">
+            <img src="programmation.jpg" alt="Projet Programmation">
+            Projets de Programmation
+        </a>
+    </div>
+    <div class="bubble small" onclick="ouvrirPopupProjet()" style="cursor: pointer;">
+        <a href="javascript:void(0)">
+            <img src="progillu/avenirpro.jpg" alt="Projet Professionel">
+            Projets Professionnels
+        </a>
+    </div>
+</div>
+
+<!-- NOUVELLE LIGNE POUR LA BULLE SPORT -->
+<div class="small-bubbles-row">
+    <div class="bubble small">
+        <a href="projetsport.html">
+            <img src="sport.jpg" alt="Projets Sportifs">
+            Projets de Sport
+        </a>
+    </div>
+</div>
+
+<div class="bubble minecraft">
+    <a href="minecraftpage.html">
+        <img src="minecraftimageaccueil.png" alt="Projet Minecraft">
+        Projet Minecraft
+    </a>
+</div>
+
             </div>
         </div>
 
