--- a/accueilEN.html
+++ b/accueilEN.html
@@ -50,6 +50,17 @@
                         </a>
                     </div>
                 </div>
+
+                <!-- NOUVELLE LIGNE POUR LA BULLE SPORT -->
+            <div class="small-bubbles-row">
+                <div class="bubble small">
+                    <a href="projetsport.html">
+                        <img src="sport.png" alt="Projets Sportifs">
+                        Sport life
+                    </a>
+                </div>
+            </div>
+
                 <div class="bubble minecraft">
                     <a href="minecraftpageEN.html">
                         <img src="minecraftimageaccueil.png" alt="Minecraft projects">
