--- a/accueil.html
+++ b/accueil.html
@@ -56,7 +56,7 @@
     <div class="bubble small">
         <a href="projetsport.html">
             <img src="sport.jpg" alt="Projets Sportifs">
-            Projets de Sport
+            Vie sportive
         </a>
     </div>
 </div>
