--- a/accueil.html
+++ b/accueil.html
@@ -55,7 +55,7 @@
 <div class="small-bubbles-row">
     <div class="bubble small">
         <a href="projetsport.html">
-            <img src="sport.jpg" alt="Projets Sportifs">
+            <img src="sport.png" alt="Projets Sportifs">
             Vie sportive
         </a>
     </div>
