--- a/accueilEN.html
+++ b/accueilEN.html
@@ -54,7 +54,7 @@
                 <!-- NOUVELLE LIGNE POUR LA BULLE SPORT -->
             <div class="small-bubbles-row">
                 <div class="bubble small">
-                    <a href="projetsport.html">
+                    <a href="projetsportEN.html">
                         <img src="sport.png" alt="Projets Sportifs">
                         Sport life
                     </a>
