Update, motivations accueil.html

--- a/accueil.html
+++ b/accueil.html
@@ -96,7 +96,14 @@
                 </div>
                 <div class="expandable-content">
                     <p>
-                        Ce site a pour but de vous partager ma motivation de manière plus directe et personnelle qu’une lettre de motivation. Je me passionne pour l’intelligence artificielle, et voudrait m'y spécialiser, en particulier pour son application aux systèmes embarqués et à la robotique. J’ai soif d’apprendre, j’aime relever des défis, et suis déterminé à aller loin. Mon projet à long terme est de compléter mon diplôme d’ingénieur par un master international plus orienté robotique et pratique, pour enrichir mon parcours et viser une carrière épanouissante, que ce soit en freelance ou en entreprise. J’aime les mathématiques appliquées comme elles peuvent l'être dans la data, et je prends du plaisir à programmer et à résoudre des problèmes logiques. Toujours motivé, j’aime tirer les autres vers le haut, que ce soit en période de partiels ou sur des projets de groupe. Si j’ai la chance d’intégrer l’ESILV, je compte m’investir à fond, notamment dans la vie associative, l’association de robotique m’attire tout particulièrement. Je suis convaincu que l’ESILV peut me donner les moyens d’aller loin, et je suis prêt à m’en donner les moyens.
+                        En tant que futur ingénieur, j'aimerais me spécialiser dans la data et dans la robotique. Je suis très motivé, et ai déjà eu des expériences concrètes de projets comme vu dans la rubrique projet programmation. 
+                    </p>
+                    <p>
+                        Sur le long terme, mon objectif est la spécialisation en doctorat, pour parler franchement, j'ai soif d'apprendre et ai envie d'en découvrir le plus que possible sur ces domaines.
+                    </p> 
+                    <p>
+                        Motivé et curieux, ce petit blog me sert depuis peu de bloc note pour me rappeler de mes différents projet 
+
                         </p>                  
                 </div>
             </div>
