Update motivations update accueilEN.html

--- a/accueilEN.html
+++ b/accueilEN.html
@@ -94,8 +94,16 @@
                     <h2>My motivations <span class="indicator">▼</span></h2>
                 </div>
                 <div class="expandable-content">
-                    <p>This website aims to share my motivation in a more direct and personal way than a traditional cover letter. I’m passionate about artificial intelligence and want to specialize in it, particularly in its application to embedded systems and robotics. I’m eager to learn, I enjoy taking on challenges, and I’m determined to go far. My long-term goal is to complement my engineering degree with an international master’s program that’s more hands-on and focused on robotics, in order to enrich my academic path and pursue a fulfilling career, whether as a freelancer or within a company. I enjoy applied mathematics, especially as used in data science, and I take great pleasure in programming and solving logical problems. Always motivated, I like to lift others up, whether during exams or in group projects. If I have the opportunity to join ESILV, I intend to fully commit, especially to student life—I'm particularly drawn to the robotics club. I am convinced that ESILV can give me the tools to go far, and I am ready to give it my all.</p>
-                    <!-- Add more text here if necessary -->
+                    <p>
+    As a future engineer, I would like to specialize in data and robotics. I am highly motivated and have already gained hands-on experience through various projects, as shown in the programming projects section.
+</p>
+<p>
+    In the long term, my goal is to pursue a PhD. To be honest, I have a strong thirst for knowledge and a deep desire to explore as much as possible in these fields.
+</p> 
+<p>
+    Motivated and curious, this small blog has recently become a sort of notebook where I keep track of my different projects.
+</p>
+
                 </div>
             </div>
         </div>
