--- a/accueil.html
+++ b/accueil.html
@@ -76,7 +76,7 @@
             <div class="popup-contenu">
                 <span class="fermer" onclick="fermerPopup()">×</span>
                 <h2>Mon CV</h2>
-                <iframe src="Paul_BRIAND_CV (1).pdf" class="cv-pdf" title="CV Paul Briand"></iframe>
+                <iframe src="Paul_BRIAND_CV_PortfolioJuin_2025.pdf" class="cv-pdf" title="CV Paul Briand"></iframe>
             </div>
         </div>
 
