--- a/accueilEN.html
+++ b/accueilEN.html
@@ -74,8 +74,8 @@
         <div id="popup" class="popup">
             <div class="popup-contenu">
                 <span class="fermer" onclick="fermerPopup()">×</span>
-                <h2>My CV that I need to translate</h2>
-                <iframe src="Paul_BRIAND_CV (1).pdf" class="cv-pdf" title="CV Paul Briand"></iframe>
+                <h2>My CV</h2>
+                <iframe src="Paul_BRIAND_CV_PortfolioJuin_2025_EN.pdf" class="cv-pdf" title="CV Paul Briand"></iframe>
             </div>
         </div>
 
