Update faute d'orthographe, la honte accueil.html

--- a/accueil.html
+++ b/accueil.html
@@ -102,9 +102,10 @@
                         Sur le long terme, mon objectif est la spécialisation en doctorat, pour parler franchement, j'ai soif d'apprendre et ai envie d'en découvrir le plus que possible sur ces domaines.
                     </p> 
                     <p>
-                        Motivé et curieux, ce petit blog me sert depuis peu de bloc note pour me rappeler de mes différents projet 
+                        Motivé et curieux, ce petit blog me sert depuis peu de bloc-notes pour me rappeler de mes différents projets ! (Ajout de la fonction machine à remonter dans le temps pour voir l'avancement du site web via Wayback Machine)
 
-                        </p>                  
+                        </p> 
+                    
                 </div>
             </div>
         </div>
